--- a/app/src/main/res/layout/activity_cloth_edit.xml
+++ b/app/src/main/res/layout/activity_cloth_edit.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:context="com.luke.mycloth.ClothEditActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:fitsSystemWindows="true"
+              android:orientation="vertical"
+              tools:context="com.luke.mycloth.ClothEditActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </android.support.design.widget.AppBarLayout>
     <ImageView
         android:id="@+id/iv_photo"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_weight="1" />
+        android:layout_width="180dp"
+        android:layout_height="320dp"
+        android:layout_gravity="center_horizontal"
+        android:scaleType="fitXY"/>
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/s_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView" />
+        android:layout_below="@+id/imageView"
+        android:entries="@array/part"
+        android:prompt="@string/category"
+        android:spinnerMode="dialog"/>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -29,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/spinner"
+        android:layout_below="@+id/s_category"
         android:orientation="horizontal">
 
         <CheckBox
@@ -37,29 +53,37 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/spring" />
+            android:text="@string/spring"/>
 
         <CheckBox
             android:id="@+id/cb_summer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/summer" />
+            android:text="@string/summer"/>
 
         <CheckBox
             android:id="@+id/cb_autumn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/autumn" />
+            android:text="@string/autumn"/>
 
         <CheckBox
             android:id="@+id/cb_winter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/winter" />
+            android:text="@string/winter"/>
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/et_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:hint="@string/backup"
+        android:inputType="text"/>
 
     <Button
         android:id="@+id/b_save"
@@ -68,5 +92,5 @@
         android:layout_below="@+id/linearLayout"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:text="@string/save" />
+        android:text="@string/save"/>
 </LinearLayout>
